# avf-transcode-cpp

./: .gitignore  CMakeLists.txt
src/: StreamTranscoder.h  StreamTranscoder.mm  VideoTranscoder.h  VideoTranscoder.mm  VideoTranscoderBridge.h  VideoTranscoderBridge.mm  main.cpp  main.mm
